# rlm

./: CODEBASE_QUERY_README.md  Codebase.txt  IMPLEMENTATION_SUMMARY.md  OPENAI_RLM_README.md  QUICKSTART.md  README.md  RUNNING_SERVER.md  SERVER_GUIDE.md  example_client.py  example_codebase_query.py  example_codebase_query_verbose.py  example_tool_calling.py  llm-adapter.md  mcp_server.py  openai_rlm_server.py  pyproject.toml  query  query_codebase.py  query_codebase_optimized.py  query_file.py  requirements.txt  requirements_server.txt  rlm_query.py  rlm_server.py  test_codebase_query.py  test_openai_rlm.py  test_rlm.py  test_server.py
examples/: large_file_example.py  simple_example.py
rlm/: rlm_api.py  rlm_repl.py
rlm/utils/: llm.py  utils.py
